# //////////////////////////////////////////////////////////////////
# ///     The SKIRT project -- advanced radiative transfer       ///
# ///       © Astronomical Observatory, Ghent University         ///
# //////////////////////////////////////////////////////////////////

# ------------------------------------------------------------------
# Builds a library with utility classes used in SKIRT
# ------------------------------------------------------------------

# set the target name
set(TARGET utils)

# list the source files in this directory
file(GLOB SOURCES "*.cpp")
file(GLOB HEADERS "*.hpp")

# create the library target
add_library(${TARGET} STATIC ${SOURCES} ${HEADERS})

# add SMILE library dependencies
target_link_libraries(${TARGET} PUBLIC fundamentals)
target_include_directories(${TARGET} PUBLIC ../../SMILE/fundamentals)

# adjust C++ compiler flags to our needs
include("../../SMILE/build/CompilerFlags.cmake")
